--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,169 +1,32 @@
-<%-
-  cores = num_cores.to_i
-
-  if cores == 0 && cluster == "pitzer"
-    # little optimization for pitzer nodes. They want the whole node, if they chose 'any',
-    # it can be scheduled on p18 or p20 nodes. If not, they'll get the constraint below.
-    base_slurm_args = ["--nodes", "1", "--exclusive"]
-  elsif cores == 0
-    # full node on owens
-    cores = 28
-    base_slurm_args = ["--nodes", "1", "--ntasks-per-node", "28"]
-  else
-    base_slurm_args = ["--nodes", "1", "--ntasks-per-node", "#{cores}"]
-  end
-
-  slurm_args = case node_type
-              when "gpu-40core"
-                base_slurm_args += ["--constraint", "40core"]
-              when "gpu-48core"
-                base_slurm_args += ["--constraint", "48core"]
-              when "any-40core"
-                base_slurm_args += ["--constraint", "40core"]
-              when "any-48core"
-                base_slurm_args += ["--constraint", "48core"]
-              when "hugemem"
-                base_slurm_args += ["--partition", "hugemem"]
-              when "largemem"
-                base_slurm_args += ["--partition", "largemem"]
-              when "debug"
-                base_slurm_args += ["--partition", "debug"]
-              else
-                base_slurm_args
-              end
-
--%>
-
+# Job submission configuration file
+#
 ---
+
 batch_connect:
   template: "basic"
   conn_params:
-    - csrf_token
-<% if cluster =~ /owens|pitzer|ascend/ -%>
+        - csrf_token
+
 script:
-<% if node_type =~ /gpu/ -%>
-  gpus_per_node: 1
-<% end -%>
   native:
-    <%- slurm_args.each do |arg| %>
-    - "<%= arg %>"
-    <%- end %>
-<% elsif cluster =~ /kubernetes/
-   if node_type =~ /owens/
-     compute_cluster = "owens"
-     apps_path = "/usr/local"
-     # Memory per core with hyperthreading enabled
-     memory_mb = num_cores.to_i * 2200
-   elsif node_type =~ /pitzer/
-     compute_cluster = "pitzer"
-     apps_path = "/apps"
-     # Memory per core with hyperthreading enabled
-     memory_mb = num_cores.to_i * 4000
-   end
-   mounts = {
-     'home'    => OodSupport::User.new.home,
-     'support' => OodSupport::User.new('support').home,
-     'project' => '/fs/project',
-     'scratch' => '/fs/scratch',
-     'ess'     => '/fs/ess',
-   }
--%>
-script:
-  wall_time: "<%= bc_num_hours.to_i * 3600 %>"
-  <%- if node_type =~ /gpu/ -%>
-  gpus_per_node: 1
-  <%- end -%>
-  native:
-    container:
-      name: "rstudio-server"
-      image: "docker-registry.osc.edu/ondemand/ondemand-base-rhel7:0.11.1"
-      image_pull_policy: "IfNotPresent"
-      command: ["/bin/bash","-l","<%= staged_root %>/job_script_content.sh"]
-      restart_policy: 'OnFailure'
-      env:
-        CLUSTER: "<%= compute_cluster %>"
-        KUBECONFIG: "/dev/null"
-        TMPDIR: "/tmp"
-      labels:
-        osc.edu/cluster: "<%= compute_cluster %>"
-      port: "8080"
-      cpu: "<%= num_cores %>"
-      memory: "<%= memory_mb %>Mi"
-    configmap:
-      files:
-        - filename: "logging.conf"
-          data: |
-            [*]
-            log-level=debug
-            logger-type=file
-            log-dir=<%= Pathname.new(staged_root).join('logs') %>
-          mount_path: '/etc/rstudio/logging.conf'
-          sub_path: 'logging.conf'
-        - filename: "database.conf"
-          data: |
-            directory=/tmp/lib/rstudio-server
-          mount_path: '/etc/rstudio/database.conf'
-          sub_path: 'database.conf'
-        - filename: 'k8_helper'
-          data: |
-            #!/usr/bin/env bash
-
-            set -x
-
-            KEY=$1
-            VALUE=$(echo -n $2 | base64)
-            CFG="$(hostname)-secret"
-
-            kubectl get secret ${CFG} -o json | jq --arg key $KEY --arg value $VALUE '.data[$key] = $value'  | kubectl apply -f -
-          mount_path: '/opt/open_ondemand/helpers'
-    mounts:
-    <%- mounts.each_pair do |name, mount| -%>
-      - type: host
-        name: <%= name %>
-        host_type: Directory
-        path: <%= mount %>
-        destination_path: <%= mount %>
+    - "-N"
+    - 1
+    - "-n"
+    - 1
+    - "-c"
+    - "<%= slurm_cores.blank? ? "1" : slurm_cores.to_i %>"
+    - "-p"
+    - "<%= slurm_partition.blank? ? "cpu" : slurm_partition %>"
+    - "-t"
+    - "<%= slurm_timelimit.blank? ? "4:00:00" : slurm_timelimit %>"
+    - "--mem-per-cpu=<%= rs_memory_cpu.blank? ? "15" : rs_memory_cpu + 'G' %>"
+  <%- unless slurm_gpu_count.to_i == 0 -%>
+    <%- unless slurm_partition == 'cpu' -%>
+      <% gpu_type, gpu_constraint = slurm_gpu_type.include?(',') ? slurm_gpu_type.split(',', 2) : [slurm_gpu_type, nil] %>
+    - "--gpus=<%= gpu_type.present? ? "#{gpu_type}:" : "" %><%= slurm_gpu_count.to_s %>"
+      <%- if gpu_constraint -%>
+    - "--constraint=<%= gpu_constraint %>"
+      <%- end -%>
     <%- end -%>
-      - type: host
-        name: munge-socket
-        host_type: Socket
-        path: /var/run/munge/munge.socket.2
-        destination_path: /var/run/munge/munge.socket.2
-      - type: host
-        name: slurm-conf
-        host_type: Directory
-        path: /etc/slurm
-        destination_path: /etc/slurm
-      - type: host
-        name: sssd-pipes
-        host_type: Directory
-        path: /var/lib/sss/pipes
-        destination_path: /var/lib/sss/pipes
-      - type: host
-        name: sssd-conf
-        host_type: Directory
-        path: /etc/sssd
-        destination_path: /etc/sssd
-      - type: host
-        name: nsswitch
-        host_type: File
-        path: /etc/nsswitch.conf
-        destination_path: /etc/nsswitch.conf
-      - type: host
-        name: lmod-init
-        host_type: File
-        path: /apps/<%= compute_cluster %>/lmod/lmod.sh
-        destination_path: /etc/profile.d/lmod.sh
-      - type: host
-        name: intel
-        host_type: Directory
-        path: /nfsroot/<%= compute_cluster %>/opt/intel
-        destination_path: /opt/intel
-      - type: host
-        name: apps
-        host_type: Directory
-        path: /apps/<%= compute_cluster %>
-        destination_path: <%= apps_path %>
-    node_selector:
-      node-role.kubernetes.io/ondemand: ''
-<% end -%>
+  <%- end -%>
+    - "--job-name=CZBH_OD_RStudio"
