--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -1,101 +1,80 @@
 #!/usr/bin/env bash
 
+#
+# Load modules
+#
 
-# Load the required environment
-setup_env () {
-  module purge
-
-  module load xalt/latest project/ondemand
-  <%- if context.cluster !~ /kubernetes|ascend/ -%>
-  module load rstudio_launcher/centos7
-  <%- end -%>
-  module load <%= all_modules %>
-}
-
-setup_env
-
-
-export WORKING_DIR="<%= session_dir %>"
+echo "Load modules."
+module purge
+module load proot
+module load <%= context.auto_modules_r %>
+module list
+echo "Module load completed."
 
 #
 # Start RStudio Server
 #
+
 # PAM auth helper used by RStudio
-export RSTUDIO_AUTH="$WORKING_DIR/bin/auth"
+export RSTUDIO_AUTH="${PWD}/bin/auth"
 
 # Generate an `rsession` wrapper script
-export RSESSION_WRAPPER_FILE="$WORKING_DIR/rsession.sh"
+export RSESSION_WRAPPER_FILE="${PWD}/rsession.sh"
 (
 umask 077
-sed 's/^ \{2\}//' > "$WORKING_DIR/rsession.sh" << EOL
+sed 's/^ \{2\}//' > "${RSESSION_WRAPPER_FILE}" << EOL
   #!/usr/bin/env bash
 
   # Log all output from this script
-  export RSESSION_LOG_FILE="$WORKING_DIR/rsession.log"
-
+  export RSESSION_LOG_FILE="${PWD}/rsession.log"
   exec &>>"\${RSESSION_LOG_FILE}"
-  set -x
-
-  # rsession.sh doesn't share the same env as the outside script, so these
-  # need to be set explicitly
-  export R_LIBS_SITE="${R_LIBS_SITE}"
-  export TZ="US/Eastern"
-  export HOME="$APPTAINER_HOME"
-  export MODULEPATH_ROOT="$MODULEPATH_ROOT"
-  export MODULEPATH="$MODULEPATH"
-  export LMOD_PKG="$LMOD_PKG"
-
-  env
 
   # Launch the original command
   echo "Launching rsession..."
-  exec rsession --r-libs-user "${R_LIBS_USER}" "\${@}"
+  set -x
+  exec /usr/lib/rstudio-server/bin/rsession --r-libs-user "${R_LIBS_USER}" "\${@}"
 EOL
 )
-chmod 700 "$WORKING_DIR/rsession.sh"
+chmod 700 "${RSESSION_WRAPPER_FILE}"
 
-# Set working directory to home directory
+# Where to keep rstudio-server database.
+export RSTUDIO_DATABASE_CONFIG=${PWD}/database.conf
+cat > ${RSTUDIO_DATABASE_CONFIG} <<- EOF
+	provider=sqlite
+	directory=${PWD}
+	EOF
+
+# Working and data directories. Maybe make these user-selectable?
+export RSTUDIO_SERVER_WORKING_DIR=/tmp/rserver-${SLURM_JOB_ID}.working
+[[ -d ${RSTUDIO_SERVER_WORKING_DIR} ]] || mkdir -p ${RSTUDIO_SERVER_WORKING_DIR} 
+
+export RSTUDIO_SERVER_DATA_DIR=/tmp/rserver-${SLURM_JOB_ID}.data
+[[ -d ${RSTUDIO_SERVER_DATA_DIR} ]] || mkdir -p ${RSTUDIO_SERVER_DATA_DIR}
+
+# Where to put the cookie?
+export RSTUDIO_SECURE_COOKIE_KEY_FILE=${PWD}/secure-cookie-key
+
+
+# Set current working directory to home directory
 cd "${HOME}"
 
-# Output debug info
-module list
-hostname
+ulimit -c 400
 
-# server log directory in this job's working directory
-mkdir -p "$WORKING_DIR/logs"
-
-# use the system installed rserver
-export PATH="$PATH:/usr/lib/rstudio-server/bin"
-
-set -x
 # Launch the RStudio Server
-echo "Starting up rserver... at $(date)"
-
-<%- if context.cluster !~ /kubernetes/ -%>
-bwrap --dev-bind / / --tmpfs /tmp \
- --bind $WORKING_DIR/etc /etc/rstudio \
- --setenv LD_LIBRARY_PATH "$LD_LIBRARY_PATH" \
-  rserver \
- --www-port "${port}" \
- --auth-none 0 \
- --auth-pam-helper-path "${RSTUDIO_AUTH}" \
- --auth-encrypt-password 0 \
- --rsession-path "${RSESSION_WRAPPER_FILE}" \
- <%- if r_version > '4.1' -%>
- --server-data-dir='/tmp/run' \
- --server-user=$(whoami)
- <%- end -%>
-
-<%- else -%>
-cd ${APPTAINER_HOME:=$HOME}
-rserver \
-  --www-port 8080 \
+echo "Starting up rserver..."
+set -x
+/usr/lib/rstudio-server/bin/rserver \
+  --auth-timeout-minutes 0 \
+  --server-daemonize 0 \
+  --auth-encrypt-password 0 \
   --auth-none 0 \
   --auth-pam-helper-path "${RSTUDIO_AUTH}" \
-  --auth-encrypt-password 0 \
+  --database-config-file ${RSTUDIO_DATABASE_CONFIG} \
   --rsession-path "${RSESSION_WRAPPER_FILE}" \
-  <%- if r_version > '4.1' -%>
-  --server-data-dir='/tmp/run' \
-  --server-user=$(whoami)
-  <%- end -%>
-<%- end -%>
+  --secure-cookie-key-file ${RSTUDIO_SECURE_COOKIE_KEY_FILE} \
+  --server-data-dir ${RSTUDIO_SERVER_DATA_DIR} \
+  --server-user ${USER} \
+  --server-working-dir ${RSTUDIO_SERVER_WORKING_DIR} \
+  --www-port ${port} 
+
+
