--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -1,8 +1,14 @@
 #!/usr/bin/env bash
-
 #
 # Load modules
 #
+
+set -x
+
+echo "Script starting..."
+echo "Waiting for RStudio Server to open port ${port}..."
+echo "TIMING - Starting wait at: $(date)"
+
 
 echo "Load modules."
 module purge
@@ -37,6 +43,24 @@ EOL
 )
 chmod 700 "${RSESSION_WRAPPER_FILE}"
 
+
+
+export MY_TMP_DIR=$(mktemp -d -t rstudio_${USER}_server-XXXX)
+mkdir -p ${MY_TMP_DIR}/var/lib/rstudio-server
+mkdir -p ${MY_TMP_DIR}/var/run/rstudio-server
+
+cat /proc/sys/kernel/random/uuid > "${MY_TMP_DIR}/var/run/rstudio-server/secure-cookie-key"
+chmod 0600 "${MY_TMP_DIR}/var/run/rstudio-server/secure-cookie-key"
+
+export RSTUDIO_DB_FILE="${MY_TMP_DIR}/var/lib/rstudio-server/rstudio-os.sqlite"
+touch ${RSTUDIO_DB_FILE}
+chmod 0600 ${RSTUDIO_DB_FILE}
+
+
+echo "Starting up rserver..."
+
+
+# Generate a secure cookie key
 # Where to keep rstudio-server database.
 export RSTUDIO_DATABASE_CONFIG=${PWD}/database.conf
 cat > ${RSTUDIO_DATABASE_CONFIG} <<- EOF
@@ -62,8 +86,9 @@ ulimit -c 400
 
 # Launch the RStudio Server
 echo "Starting up rserver..."
-set -x
-/usr/lib/rstudio-server/bin/rserver \
+
+
+apptainer exec /usr/lib/rstudio-server/bin/rserver \
   --auth-timeout-minutes 0 \
   --server-daemonize 0 \
   --auth-encrypt-password 0 \
@@ -78,3 +103,16 @@ set -x
   --www-port ${port} 
 
 
+
+
+#  apptainer exec --bind ${MY_TMP_DIR}/var/lib/rstudio-server:/var/lib/rstudio-server \
+#  --bind ${MY_TMP_DIR}/var/run/rstudio-server:/var/run/rstudio-server \
+#  --home /home/oodadmin:/home/oodadmin \
+#  ${RSTUDIO_SERVER_IMAGE} \
+#  /usr/lib/rstudio-server/bin/rserver \
+#  --auth-none 1 \
+#  --www-port=${port} \
+#  --secure-cookie-key-file=/var/run/rstudio-server/secure-cookie-key \
+#  --database-config-file=/var/lib/rstudio-server/rstudio-os.sqlite &
+
+sleep 5
