--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -10,16 +10,30 @@ echo "Waiting for RStudio Server to open port ${port}..."
 echo "TIMING - Starting wait at: $(date)"
 
 
-echo "Load modules."
+echo "Load modules"
 module purge
-module load proot
+# module load proot
 module load <%= context.auto_modules_r %>
 module list
+
 echo "Module load completed."
 
 #
-# Start RStudio Server
+# Beginning the RStudio Server session
 #
+
+# Set up a temporary directory for RStudio Server
+export MY_TMP_DIR=$(mktemp -d -t rstudio_${USER}_server-XXXX)
+mkdir -p ${MY_TMP_DIR}/var/lib/rstudio-server
+mkdir -p ${MY_TMP_DIR}/var/run/rstudio-server
+
+# working directories for RStudio Server
+export RSTUDIO_SERVER_WORKING_DIR=${MY_TMP_DIR}/rserver-${SLURM_JOB_ID}.working
+export RSTUDIO_SERVER_DATA_DIR=${MY_TMP_DIR}/rserver-${SLURM_JOB_ID}.data
+
+#make the directories if they don't exist
+mkdir -p ${RSTUDIO_SERVER_WORKING_DIR}
+mkdir -p ${RSTUDIO_SERVER_DATA_DIR}
 
 # PAM auth helper used by RStudio
 export RSTUDIO_AUTH="${PWD}/bin/auth"
@@ -41,13 +55,13 @@ sed 's/^ \{2\}//' > "${RSESSION_WRAPPER_FILE}" << EOL
   exec /usr/lib/rstudio-server/bin/rsession --r-libs-user "${R_LIBS_USER}" "\${@}"
 EOL
 )
+
 chmod 700 "${RSESSION_WRAPPER_FILE}"
 
+export RSTUDIO_SERVER_IMAGE="/hpc/mydata/randall.white/rstudio_apptainer_build/rstudio_apptainer/this.sif"
+export SINGULARITY_BINDPATH="/etc,/media,/mnt,/opt,/srv,/usr,/var,/hpc"
+export PATH="$PATH:/usr/lib/rstudio-server/bin"
 
-
-export MY_TMP_DIR=$(mktemp -d -t rstudio_${USER}_server-XXXX)
-mkdir -p ${MY_TMP_DIR}/var/lib/rstudio-server
-mkdir -p ${MY_TMP_DIR}/var/run/rstudio-server
 
 cat /proc/sys/kernel/random/uuid > "${MY_TMP_DIR}/var/run/rstudio-server/secure-cookie-key"
 chmod 0600 "${MY_TMP_DIR}/var/run/rstudio-server/secure-cookie-key"
@@ -55,10 +69,6 @@ chmod 0600 "${MY_TMP_DIR}/var/run/rstudio-server/secure-cookie-key"
 export RSTUDIO_DB_FILE="${MY_TMP_DIR}/var/lib/rstudio-server/rstudio-os.sqlite"
 touch ${RSTUDIO_DB_FILE}
 chmod 0600 ${RSTUDIO_DB_FILE}
-
-
-echo "Starting up rserver..."
-
 
 # Generate a secure cookie key
 # Where to keep rstudio-server database.
@@ -68,16 +78,9 @@ cat > ${RSTUDIO_DATABASE_CONFIG} <<- EOF
 	directory=${PWD}
 	EOF
 
-# Working and data directories. Maybe make these user-selectable?
-export RSTUDIO_SERVER_WORKING_DIR=/tmp/rserver-${SLURM_JOB_ID}.working
-[[ -d ${RSTUDIO_SERVER_WORKING_DIR} ]] || mkdir -p ${RSTUDIO_SERVER_WORKING_DIR} 
-
-export RSTUDIO_SERVER_DATA_DIR=/tmp/rserver-${SLURM_JOB_ID}.data
-[[ -d ${RSTUDIO_SERVER_DATA_DIR} ]] || mkdir -p ${RSTUDIO_SERVER_DATA_DIR}
 
 # Where to put the cookie?
 export RSTUDIO_SECURE_COOKIE_KEY_FILE=${PWD}/secure-cookie-key
-
 
 # Set current working directory to home directory
 cd "${HOME}"
@@ -88,21 +91,20 @@ ulimit -c 400
 echo "Starting up rserver..."
 
 
-apptainer exec /usr/lib/rstudio-server/bin/rserver \
+apptainer exec --bind ${MY_TMP_DIR}/var/lib/rstudio-server:/var/lib/rstudio-server \
+  --bind ${MY_TMP_DIR}/var/run/rstudio-server:/var/run/rstudio-server \
   --auth-timeout-minutes 0 \
   --server-daemonize 0 \
   --auth-encrypt-password 0 \
   --auth-none 0 \
   --auth-pam-helper-path "${RSTUDIO_AUTH}" \
-  --database-config-file ${RSTUDIO_DATABASE_CONFIG} \
+  --database-config-file /var/lib/rstudio-server/rstudio-os.sqlite \
   --rsession-path "${RSESSION_WRAPPER_FILE}" \
-  --secure-cookie-key-file ${RSTUDIO_SECURE_COOKIE_KEY_FILE} \
+  --secure-cookie-key-file /var/run/rstudio-server/secure-cookie-key \
   --server-data-dir ${RSTUDIO_SERVER_DATA_DIR} \
   --server-user ${USER} \
   --server-working-dir ${RSTUDIO_SERVER_WORKING_DIR} \
-  --www-port ${port} 
-
-
+  --www-port ${port} &
 
 
 #  apptainer exec --bind ${MY_TMP_DIR}/var/lib/rstudio-server:/var/lib/rstudio-server \
